--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ block content
   img.stefan(src='/images/monkey.jpg')
 
 
-  canvas#canvas(width="300" , height="300")
+  #box.jsxgraph(style='width:600px; height:600px;')
   form
     | Equation:
     input#equation(type='text', name='eq')
